' Generated by UML Generator
' Encoded: hLVRRXGn37tVhyXZ2xk8vn6gG2qLbQ1253uWEvEs4JF9AiaWhlzEdAkTcQM0-b9r7FlOERx4-z8wRjmyZHlxMQe3DtnY_SYjVUMSaVlPYQjUgnlvNR3dctiv2DPBquzYimbQh9-DrUp7Xh5ThmTvfpjsumtL7KYKdlP6O4a_7_Gx_bLENayg1wA3qRV2QjEn_1z8fRAzaOTUQYLinruPmx-zbTQz4DRDW-JAYJFGkzU66wc9IfA5yvt_ypG4UN9Q_wMXRXaDTCkQC8DbZ6WlpObNh56STcpYtgoVHmvgTyAT1_IJKtJnfxQ8gM-lz4NB8LbUXpWMbabCewIMvoLYi8xK1gTLtbwAsBzFt8CroWD0bADbfYZ65SuP01tB6g1IvRz9DtNs9YMU-a6f1oT5wKzbad5_vPeUXEy3noUXN2hjjKBsTKJWWYJKtApa5s6i7FZGCVHHwX4xY6L994sU7w4s85PAL8as5abGE7OdYlQfNWWWwVq03IiSesB9kJIYX_IdMSB7aV2jvacOEZHwEGV8gX29pIY9rV99y7o_LpJVx0GhqtqE5iiU3bA2rdHmGAOzc6J8QPEV4C3ILnGtuRN4rGQ9p1bn44uEqALxhKV15KZBY2BfBT8wAYjSf11z3qeUdvYteh_drxoNauGQxjW5TsBBbj7GMMezcLryHDf1Aks7R0pKrCi0D_LenGCXzrsvEMq0SdU0H8eFiRL8GXebCGEUhXinSSLnUOB6bPA-63lsKKuYoowbgeAGWOGLwSyV2ymjQn6ZfE3bEhx8belwgYSBzEMeZPu08mMRnsiwQADP8lZ8Lin1IkDkkIsqHtP3eSNoYfFPWIqVEpReUJy6OIrQ_5ANiPqAhZ1UF4JEwoVo1HNVUDgoTJzRXht4hOEF06YkCmOmKU85XYx15KZJnO2VA4D1jCl2AfZ59ukWASHhrEqDLO23ZjUlklBE052cjxmj9uIHcc6-jyxmtiMLantyww1LIZGQD-jFyEh8AKbDM36b-UFVHrXkezTfGgUf3esbvBAbl0pvUApbxf96jbOcw7Jz7crRvHKkactv27C6Dr7S1Yvax_XmRDE9J9VLaNpzptFHX140kPLtYfjKHqqDHNvkejcY3xAyXLtPZl8z7zoIYk93_2mOH-lFiQqIhu444XzKvcUyYhM2nzuYBt1ibAOskj0AHFtlBeOf2xyhd-nszTT856alGeEg2jDJcIJFdfsXTO9izA0S9nGHWo-ypAB5QhVxUPQ74vO3KdM23i1xT55VhoSqS7eGbKjF4eT5MWF7fGHIV97DIw46_uF-Dm
' URL: http://www.plantuml.com/plantuml/uml/hLVRRXGn37tVhyXZ2xk8vn6gG2qLbQ1253uWEvEs4JF9AiaWhlzEdAkTcQM0-b9r7FlOERx4-z8wRjmyZHlxMQe3DtnY_SYjVUMSaVlPYQjUgnlvNR3dctiv2DPBquzYimbQh9-DrUp7Xh5ThmTvfpjsumtL7KYKdlP6O4a_7_Gx_bLENayg1wA3qRV2QjEn_1z8fRAzaOTUQYLinruPmx-zbTQz4DRDW-JAYJFGkzU66wc9IfA5yvt_ypG4UN9Q_wMXRXaDTCkQC8DbZ6WlpObNh56STcpYtgoVHmvgTyAT1_IJKtJnfxQ8gM-lz4NB8LbUXpWMbabCewIMvoLYi8xK1gTLtbwAsBzFt8CroWD0bADbfYZ65SuP01tB6g1IvRz9DtNs9YMU-a6f1oT5wKzbad5_vPeUXEy3noUXN2hjjKBsTKJWWYJKtApa5s6i7FZGCVHHwX4xY6L994sU7w4s85PAL8as5abGE7OdYlQfNWWWwVq03IiSesB9kJIYX_IdMSB7aV2jvacOEZHwEGV8gX29pIY9rV99y7o_LpJVx0GhqtqE5iiU3bA2rdHmGAOzc6J8QPEV4C3ILnGtuRN4rGQ9p1bn44uEqALxhKV15KZBY2BfBT8wAYjSf11z3qeUdvYteh_drxoNauGQxjW5TsBBbj7GMMezcLryHDf1Aks7R0pKrCi0D_LenGCXzrsvEMq0SdU0H8eFiRL8GXebCGEUhXinSSLnUOB6bPA-63lsKKuYoowbgeAGWOGLwSyV2ymjQn6ZfE3bEhx8belwgYSBzEMeZPu08mMRnsiwQADP8lZ8Lin1IkDkkIsqHtP3eSNoYfFPWIqVEpReUJy6OIrQ_5ANiPqAhZ1UF4JEwoVo1HNVUDgoTJzRXht4hOEF06YkCmOmKU85XYx15KZJnO2VA4D1jCl2AfZ59ukWASHhrEqDLO23ZjUlklBE052cjxmj9uIHcc6-jyxmtiMLantyww1LIZGQD-jFyEh8AKbDM36b-UFVHrXkezTfGgUf3esbvBAbl0pvUApbxf96jbOcw7Jz7crRvHKkactv27C6Dr7S1Yvax_XmRDE9J9VLaNpzptFHX140kPLtYfjKHqqDHNvkejcY3xAyXLtPZl8z7zoIYk93_2mOH-lFiQqIhu444XzKvcUyYhM2nzuYBt1ibAOskj0AHFtlBeOf2xyhd-nszTT856alGeEg2jDJcIJFdfsXTO9izA0S9nGHWo-ypAB5QhVxUPQ74vO3KdM23i1xT55VhoSqS7eGbKjF4eT5MWF7fGHIV97DIw46_uF-Dm
' Generated on: 2025-11-23T18:27:26.884482200

@startuml
skinparam classAttributeIconSize 0
hide circle

class curso {
  -codigo: String
  -nombre: String
  -cupoMaximo: int
  -profesor: profesor
  -inscripciones: ArrayList<estudiante>
  -horarios: ArrayList<horario>
  --
  +curso()
  +curso(codigo: String, nombre: String, cupoMaximo: int)
  +inscribir(e: estudiante): matricula
  +getCodigo(): String
  +setCodigo(codigo: String): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCupoMaximo(): int
  +setCupoMaximo(cupoMaximo: int): void
  +getProfesor(): profesor
  +setProfesor(profesor: profesor): void
  +getInscripciones(): ArrayList<estudiante>
  +setInscripciones(inscripciones: ArrayList<estudiante>): void
  +getHorarios(): ArrayList<horario>
  +setHorarios(horarios: ArrayList<horario>): void
}

class departamento {
  -nombre: String
  -cursos: ArrayList<curso>
  -universidad: universidad
  --
  +departamento()
  +departamento(nombre: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCursos(): ArrayList<curso>
  +setCursos(cursos: ArrayList<curso>): void
  +getUniversidad(): universidad
  +setUniversidad(universidad: universidad): void
}

class direccion {
  -calle: String
  -numero: int
  -ciudad: String
  --
  +direccion()
  +direccion(calle: String, numero: int, ciudad: String)
  +getCalle(): String
  +setCalle(calle: String): void
  +getNumero(): int
  +setNumero(numero: int): void
  +getCiudad(): String
  +setCiudad(ciudad: String): void
}

class estudiante {
  -repetidor: boolean
  -matriculas: ArrayList<matricula>
  --
  +estudiante()
  +estudiante(dni: String, nombre: String, fechaNacimiento: Date, repetidor: boolean)
  +inscribirse(c: curso): matricula
  +isRepetidor(): boolean
  +setRepetidor(repetidor: boolean): void
  +getMatriculas(): ArrayList<matricula>
  +setMatriculas(matriculas: ArrayList<matricula>): void
}

class horario {
  -diaSemana: String
  -horaInicio: Time
  -horaFin: Time
  --
  +horario()
  +horario(diaSemana: String, horaInicio: Time, horaFin: Time)
  +getDiaSemana(): String
  +setDiaSemana(diaSemana: String): void
  +getHoraInicio(): Time
  +setHoraInicio(horaInicio: Time): void
  +getHoraFin(): Time
  +setHoraFin(horaFin: Time): void
}

class matricula {
  -fecha: Date
  -notaFinal: double
  -estudiante: estudiante
  -curso: curso
  --
  +matricula()
  +matricula(fecha: Date, notaFinal: double, estudiante: estudiante, curso: curso)
  +calcularNotaFinal(): double
  +getFecha(): Date
  +setFecha(fecha: Date): void
  +getNotaFinal(): double
  +setNotaFinal(notaFinal: double): void
  +getEstudiante(): estudiante
  +setEstudiante(estudiante: estudiante): void
  +getCurso(): curso
  +setCurso(curso: curso): void
}

abstract class persona {
  -dni: String
  -nombre: String
  -fechaNacimiento: Date
  --
  +persona()
  +persona(dni: String, nombre: String, fechaNacimiento: Date)
  +getEdad(): int
  +getDni(): String
  +setDni(dni: String): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getFechaNacimiento(): Date
  +setFechaNacimiento(fechaNacimiento: Date): void
}

class profesor {
  -salario: double
  -cursosDictados: ArrayList<curso>
  --
  +profesor()
  +profesor(dni: String, nombre: String, fechaNacimiento: Date, salario: double)
  +asignarCurso(c: curso): void
  +getSalario(): double
  +setSalario(salario: double): void
  +getCursosDictados(): ArrayList<curso>
  +setCursosDictados(cursosDictados: ArrayList<curso>): void
}

class universidad {
  -nombre: String
  -departamentos: ArrayList<departamento>
  --
  +universidad()
  +universidad(nombre: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getDepartamentos(): ArrayList<departamento>
  +setDepartamentos(departamentos: ArrayList<departamento>): void
}

curso *-- profesor
curso o-- estudiante
curso o-- horario
curso ..> matricula
departamento o-- curso
departamento *-- universidad
estudiante --|> persona
estudiante o-- matricula
estudiante ..> curso
matricula *-- estudiante
matricula *-- curso
profesor --|> persona
profesor o-- curso
universidad o-- departamento
@enduml